--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Forum edukacyjne poświęcona informatyce i kryptografii kwantowej" />
     <meta name="keywords"
-        content="forum, edukacja, informtyka kwantowa, kryptografia kwantowa, technologie kwantowe, protokoły kwantowe, bramki kwantowe" />
+        content="aktualności, edukacja, informtyka kwantowa, kryptografia kwantowa, technologie kwantowe, protokoły kwantowe, bramki kwantowe" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -50,22 +50,17 @@
                             </li>
                         </span>
 
-                        <span class="border-end border-secondary">
-                            <li class="nav-item">
-                                <a class="nav-link active mx-1" aria-current="page" href="#">Forum</a>
-                            </li>
-                        </span>
 
                         <span class="border-end border-secondary">
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle active mx-1" href="#" data-bs-toggle="dropdown"
-                                    role="button">
-                                    Edukacja
+                                    data-bs-auto-close="outside" role="button">
+                                    Materiały
                                 </a>
                                 <ul class="dropdown-menu">
 
-                                    <li>
-                                        <a class="dropdown-item dropdown-toggle" href="#">
+                                    <li class="dropend">
+                                        <a class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" href="#">
                                             Informatyka kwantowa
                                         </a>
                                         <ul class="dropdown-menu dropdown-submenu">
@@ -100,8 +95,8 @@
                                         </ul>
                                     </li>
 
-                                    <li>
-                                        <a class="dropdown-item dropdown-toggle" href="#">
+                                    <li class="dropend">
+                                        <a class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" href="#">
                                             Protokoły kwantowe
                                         </a>
                                         <ul class="dropdown-menu dropdown-submenu">
@@ -155,7 +150,7 @@
                                 <i class="fa-solid fa-user fa-2xl ps-3 " style="color: #2272ff;"></i>
                                 User
                             </a>
-                            
+
                         </span>
 
                     </div>
@@ -167,7 +162,7 @@
     </header>
 
 
-    <main>
+    <main class="my-100">
 
         <div class="container-fluid m-3">
             <div class="row">
@@ -302,42 +297,41 @@
 
                 <div class="col-xl-2 col-5" style="color:white">
 
-                        <div class="container-fluid rounded bg-dark">
-                            <form class="form-group flex-column my-3" role="search">
-                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                                <div class="mt-2 d-flex flex-column">
-                                    <button class="btn btn-outline-primary" type="submit">Wyszukaj</button>
-                                </div>
-                            </form>
-                            <div class="container mb-5 p-3 text-center">
-                                <ul class="list-group list-group-item-white text-start">
-                                    <a href="#"
-                                        class="list-group-item list-group-item-action list-group-item-white">Fizyka
-                                        kwantowa</a>
-                                    <a href="#"
-                                        class="list-group-item list-group-item-action list-group-item-white">Kryptografia
-                                        kwantowa</a>
-                                    <a href="#"
-                                        class="list-group-item list-group-item-action list-group-item-white">Informatyka
-                                        kwantowa</a>
-                                    <a href="#"
-                                        class="list-group-item list-group-item-action list-group-item-white">Internet
-                                        kwantowy</a>
-                                    <a href="#"
-                                        class="list-group-item list-group-item-action list-group-item-white">Przesyłanie
-                                        informacji</a>
-                                </ul>
+                    <div class="container-fluid rounded bg-dark">
+                        <form class="form-group flex-column my-3" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <div class="mt-2 d-flex flex-column">
+                                <button class="btn btn-outline-primary" type="submit">Wyszukaj</button>
                             </div>
+                        </form>
+                        <div class="container mb-5 p-3 text-center">
+                            <ul class="list-group list-group-item-white text-start">
+                                <a href="#" class="list-group-item list-group-item-action list-group-item-white">Fizyka
+                                    kwantowa</a>
+                                <a href="#"
+                                    class="list-group-item list-group-item-action list-group-item-white">Kryptografia
+                                    kwantowa</a>
+                                <a href="#"
+                                    class="list-group-item list-group-item-action list-group-item-white">Informatyka
+                                    kwantowa</a>
+                                <a href="#"
+                                    class="list-group-item list-group-item-action list-group-item-white">Internet
+                                    kwantowy</a>
+                                <a href="#"
+                                    class="list-group-item list-group-item-action list-group-item-white">Przesyłanie
+                                    informacji</a>
+                            </ul>
                         </div>
+                    </div>
 
-                        <div class="container rounded bg-dark my-3 p-3 text-center">
-                            <div class="container my-3 text-center">
-                                <img src="images/clouds.jpg" class="img-fluid rounded" alt="...">
-                            </div>
-                            <div class="container my-3 text-center">
-                                <img src="images/clouds.jpg" class="img-fluid rounded" alt="...">
-                            </div>
+                    <div class="container rounded bg-dark my-3 p-3 text-center">
+                        <div class="container my-3 text-center">
+                            <img src="images/clouds.jpg" class="img-fluid rounded" alt="...">
                         </div>
+                        <div class="container my-3 text-center">
+                            <img src="images/clouds.jpg" class="img-fluid rounded" alt="...">
+                        </div>
+                    </div>
 
                 </div>
 
