News.html + changes in index.html

--- a/news.html
+++ b/news.html
@@ -210,45 +210,9 @@
 
     <main class="my-100">
 
-        <div class="container-fluid">
+        <div class="container-fluid my-3">
             <div class="row">
                 <div class="col-xl-10 col-8" style="color:white">
-
-                    <div class="row justify-content-center">
-                        <div class="col col-lg-3 col-8 d-flex">
-                            <div class="card text-bg-primary mx-1 my-3" style="max-width: 45rem;">
-                                <div class="card-header">Domena.pl</div>
-                                <div class="card-body" style="height: relative;">
-                                    <h5 class="card-title">O czym jest ta strona?</h5>
-                                    <p class="card-text">Ta strona obejmuję tematyką informatyki i kryptografii
-                                        kwantowej.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col col-lg-3 col-8 d-flex">
-                            <div class="card text-bg-primary mx-1 my-3" style="max-width: 45rem;">
-                                <div class="card-header">Domena.pl</div>
-                                <div class="card-body" style="height: relative;">
-                                    <h5 class="card-title">Dla kogo jest ta strona?</h5>
-                                    <p class="card-text">Ta strona jest dla wszystkich zainteresowanych, chcących
-                                        poszerzyć wiedzę o fizyce kwantowej.</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col col-lg-3 col-8 d-flex">
-                            <div class="card text-bg-primary mx-1 my-3" style="max-width: 45rem;">
-                                <div class="card-header">Domena.pl</div>
-                                <div class="card-body" style="height: relative;">
-                                    <h5 class="card-title">Co znajdziesz na tej stronie?</h5>
-                                    <p class="card-text">Na tej stronie znajdziesz forum z aktualnościami oraz materiały
-                                        edukacyjne dotyczące tematu fizyki kwantowej.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                     <div class="text-center">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sagittis vulputate sem, ut
@@ -343,7 +307,31 @@
 
                 <div class="col-xl-2 col-4" style="color:white">
 
-                    <div class="container-fluid rounded bg-dark my-3 p-3 text-center">
+                    <div class="container-fluid rounded bg-dark p-3 my-3">
+                        <form class="form-group flex-column p-3" role="search">
+                            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                            <div class="mt-2 d-flex flex-column">
+                                <button class="btn btn-outline-primary" type="submit">Wyszukaj</button>
+                            </div>
+                        </form>
+                        <div class="container p-3 text-center">
+                            <ul class="list-group list-group-item-white text-start">
+                                <a href="#" class="list-group-item list-group-item-action list-group-item-white">Mechanika
+                                    kwantowa</a>
+                                <a href="#"
+                                    class="list-group-item list-group-item-action list-group-item-white">Kryptografia
+                                    kwantowa</a>
+                                <a href="#"
+                                    class="list-group-item list-group-item-action list-group-item-white">Informatyka
+                                    kwantowa</a>
+                                <a href="#"
+                                    class="list-group-item list-group-item-action list-group-item-white">Internet
+                                    kwantowy</a>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="container-fluid rounded bg-dark p-3 text-center">
                         <div class="container my-3 text-center">
                             <img src="images/clouds.jpg" class="img-fluid rounded" alt="...">
                         </div>
